# powerattackkey

./: CMakeLists.txt  DXScanCodes.md  README.md  plugin.cpp  vcpkg-configuration.json
data/: Consecutive Light Attacks.esp  Consecutive Light Attacks.ini
data/SKSE/Plugins/: PowerAttackKey.ini
include/: InputHandler.h  PCH.h  Settings.h
src/: InputHandler.cpp  Main.cpp  Settings.cpp
